--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Russian-travel</title>
-    <link rel="stylesheet" href="./pages/pages.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
-    <div class="page">
+    <!-- Страница -->
+    <main class="page">
+
+        <!-- Header -->
     <header class="header">
         <img src="./images/__logo.svg" alt="логотип" class="header__logo">
         <div class="header__lang-links">
@@ -15,6 +18,31 @@
             <a href="" class="header__lang-link">En</a>
         </div>
     </header>
+
+
+    <section class="lead">
+        <h1 class="lead__title">Путешествия по России</h1>
+
+        <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+
+        <img src="./images/__image.svg" alt="картинка дороги" class="lead__image">
+
+        <p class="lead__caption">ваша полка — верхняя</p>
+    </section>
+
+    <section class="intro">
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+
+        <p class="intro__list"><br>
+            Часовых поясов 11</br>
+            Объектов природного наследия ЮНЕСКО 12</br>
+            Объектов культурного наследия ЮНЕСКО 16</br>
+            Природных заповедников 105</br>
+            Аэропортов 241</br></p>
+
+    </section>
 
     </div>
 </body>
