--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="header">
         <img src="./images/__logo.svg" alt="логотип" class="header__logo">
         <div class="header__lang-links">
-            <a href="" class="header__lang-link">Ru</a>
-            <a href="" class="header__lang-link">En</a>
+            <a href="#" class="header__lang-link">Ru</a>
+            <a href="#" class="header__lang-link">En</a>
         </div>
     </header>
 
@@ -45,7 +45,18 @@
     </section>
 
     <section class="photo-grid">
-        
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
+        <div class="photo-grid__item"></div>
     </section>
 
     </div>
