--- a/index.html
+++ b/index.html
@@ -142,13 +142,14 @@
     </section>
 
     <section class="cover">
+       <a href="#" class="cover__link">
         <div class="cover__overlay">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p> 
         </div>
+       </a>
     </section>
     
-
     </main>
 </body>
 </html>
