--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a href="#" class="place__link">park-kosa.ru</a>
+                <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
             </div>
             <img src="./images/places__image/1i.png" alt="Картинка дороги" class="places__image">
             <div class="place__paragraph-item">
@@ -81,7 +81,7 @@
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a href="" class="place__link">National Geographic</a>
+                <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
             </div>
             <img src="./images/places__image/2i.png" alt="Картинка дороги" class="place__image">
             <div class="place__paragraph-item">
@@ -97,7 +97,7 @@
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a href="" class="place__link">Facebook</a>
+                <a href="https://www.facebook.com/vera.bash" class="place__link">Facebook</a>
             </div>
             <img src="./images/places__image/3i.png" alt="Картинка дороги" class="place__image">
             <div class="place__paragraph-item">
@@ -112,7 +112,7 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a href="" class="place__link">https://vk.com/baikalmile</a>
+                <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/places__image/4i.png" alt="Картинка дороги" class="place__image">
             <div class="place__paragraph-item">
@@ -128,7 +128,7 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
                 <p class="place__url-heading">URL</p>
-                <a href="" class="place__link">http://vodlozero.ru/</a>
+                <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
             </div>
             <img src="./images/places__image/5i.png" alt="Картинка дороги" class="place__image">
             <div class="place__paragraph-item">
@@ -142,13 +142,29 @@
     </section>
 
     <section class="cover">
-       <a href="#" class="cover__link">
+       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
         <div class="cover__overlay">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p> 
         </div>
        </a>
     </section>
+
+    <footer class="footer">
+        <ul class="footer__links">
+            <li>
+                <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+                <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+                <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+                <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+                <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+            </li>
+        </ul>
+
+        <p class="footer__copyright">
+            © 2020. Артём Царёв
+        </p>
+    </footer>
     
     </main>
 </body>
