--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Header -->
     <header class="header">
         <img src="./images/__logo.svg" alt="логотип" class="header__logo">
+
         <div class="header__lang-links">
             <a href="#" class="header__lang-link">Ru</a>
             <a href="#" class="header__lang-link">En</a>
@@ -35,12 +36,12 @@
 
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
 
-        <p class="intro__list"></br>
-            Часовых поясов 11</br>
-            Объектов природного наследия ЮНЕСКО 12</br>
-            Объектов культурного наследия ЮНЕСКО 16</br>
-            Природных заповедников 105</br>
-            Аэропортов 241</br></p>
+        <ul class="intro__list">
+            <li class = "intro__list-item">Часовых поясов 11</li>
+            <li class = "intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
+            <li class = "intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
+            <li class = "intro__list-item">Природных заповедников 105</li>
+            <li class = "intro__list-item">Аэропортов 241</li></ul>
 
     </section>
 
@@ -70,7 +71,7 @@
                 <p class="place__url-heading">URL</p>
                 <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
             </div>
-            <img src="./images/places__image/1i.png" alt="Картинка дороги" class="places__image">
+            <img src="./images/places__image/1i.png" alt="Картинка дороги" class="place__image">
             <div class="place__paragraph-item">
                 <p class = "place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                 <p class = "place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -142,11 +143,17 @@
     </section>
 
     <section class="cover">
+
        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+
         <div class="cover__overlay">
+
             <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p> 
+
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+
         </div>
+
        </a>
     </section>
 
