--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./images/__logo.svg" alt="логотип" class="header__logo">
 
         <div class="header__lang-links">
-            <a href="#" class="header__lang-link">Ru</a>
+            <a href="#" class="header__lang-link header__lang-link_focus">Ru</a>
             <a href="#" class="header__lang-link">En</a>
         </div>
     </header>
@@ -37,11 +37,12 @@
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
 
         <ul class="intro__list">
-            <li class = "intro__list-item">Часовых поясов 11</li>
-            <li class = "intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-            <li class = "intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-            <li class = "intro__list-item">Природных заповедников 105</li>
-            <li class = "intro__list-item">Аэропортов 241</li></ul>
+            <li class = "intro__list-item">Часовых поясов <span class="intro__list-span"> 
+            11</span></li>
+            <li class = "intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-span">12</span></li>
+            <li class = "intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-span">16</span></li>
+            <li class = "intro__list-item"><span class="intro__list-span">Природных заповедников 105</span></li>
+            <li class = "intro__list-item">Аэропортов <span class="intro__list-span">241</span></li></ul>
 
     </section>
 
