--- a/index.html
+++ b/index.html
@@ -147,18 +147,19 @@
 
        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
 
-        <div class="cover__overlay">
+<!--        <div class="cover__overlay">-->
 
             <h2 class="cover__title">До Байкала «на собаках»</h2>
 
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
 
-        </div>
+<!--        </div>-->
 
        </a>
     </section>
 
     <footer class="footer">
+       <nav>
         <ul class="footer__links">
             <li>
                 <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
@@ -168,6 +169,7 @@
                 <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
             </li>
         </ul>
+      </nav>
 
         <p class="footer__copyright">
             © 2020. Артём Царёв
